--- a/src/StepMania-net2008.vcproj
+++ b/src/StepMania-net2008.vcproj
@@ -50,7 +50,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;ffmpeg\modern_working\include;BaseClasses;&quot;..\extern\jsoncpp\include&quot;;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis"
+				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;ffmpeg\modern_working\include;BaseClasses;..\extern\jsoncpp\include;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng\include;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis"
 				PreprocessorDefinitions="WIN32,_DEBUG,_WINDOWS,WINDOWS,DEBUG,GLEW_STATIC"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="3"
@@ -85,7 +85,7 @@
 				OutputFile="../Program/StepMania-debug.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="ffmpeg\lib"
+				AdditionalLibraryDirectories="ffmpeg\lib;..\extern\libpng\lib\;..\extern\libjpeg\;..\extern\zlib\;&quot;..\extern\mad-0.15.1b\msvc++\Release\&quot;"
 				GenerateManifest="true"
 				IgnoreDefaultLibraryNames="wininet.lib;msimg32.lib;libci.lib;msvcrt.lib"
 				GenerateDebugInformation="true"
@@ -158,7 +158,7 @@
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="2"
-				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;ffmpeg\modern_working\include;BaseClasses;&quot;..\extern\jsoncpp\include&quot;;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis"
+				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;ffmpeg\modern_working\include;BaseClasses;..\extern\jsoncpp\include;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng\include;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis"
 				PreprocessorDefinitions="WIN32,NDEBUG,_WINDOWS,WINDOWS,RELEASE,GLEW_STATIC"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -196,7 +196,7 @@
 				OutputFile="../Program/StepMania.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="ffmpeg\lib"
+				AdditionalLibraryDirectories="ffmpeg\lib;..\extern\libpng\lib\;..\extern\libjpeg\;..\extern\zlib\;&quot;..\extern\mad-0.15.1b\msvc++\Release\&quot;"
 				IgnoreDefaultLibraryNames="wininet.lib;msimg32.lib;libci.lib"
 				ProgramDatabaseFile="$(IntDir)/StepMania.pdb"
 				GenerateMapFile="true"
@@ -263,7 +263,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;ffmpeg\modern_working\include;BaseClasses;&quot;..\extern\jsoncpp\include&quot;;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis"
+				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;ffmpeg\modern_working\include;BaseClasses;..\extern\jsoncpp\include;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng\include;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis"
 				PreprocessorDefinitions="WIN32,_DEBUG,_WINDOWS,WINDOWS,DEBUG,GLEW_STATIC"
 				ExceptionHandling="0"
 				BasicRuntimeChecks="0"
@@ -298,7 +298,7 @@
 				OutputFile="../Program/StepMania-fastdebug.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="ffmpeg\lib"
+				AdditionalLibraryDirectories="ffmpeg\lib;..\extern\libpng\lib\;..\extern\libjpeg\;..\extern\zlib\;&quot;..\extern\mad-0.15.1b\msvc++\Release\&quot;"
 				GenerateManifest="true"
 				IgnoreDefaultLibraryNames="wininet.lib;msimg32.lib;libci.lib;msvcrt.lib"
 				GenerateDebugInformation="true"
@@ -371,7 +371,7 @@
 				InlineFunctionExpansion="2"
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;ffmpeg\modern_working\include;BaseClasses;&quot;..\extern\jsoncpp\include&quot;;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis"
+				AdditionalIncludeDirectories=".;&quot;..\extern\lua-5.1\src&quot;;ffmpeg\modern_working\include;BaseClasses;..\extern\jsoncpp\include;&quot;..\extern\glew-1.5.8\include&quot;;..\extern\pcre;&quot;..\extern\mad-0.15.1b&quot;;..\extern\libpng\include;..\extern\libjpeg;..\extern\zlib;..\extern\vorbis"
 				PreprocessorDefinitions="WIN32,NDEBUG,_WINDOWS,WINDOWS,RELEASE,GLEW_STATIC"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -410,7 +410,7 @@
 				OutputFile="..\Program/StepMania-SSE2.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
-				AdditionalLibraryDirectories="ffmpeg\lib"
+				AdditionalLibraryDirectories="ffmpeg\lib;..\extern\libpng\lib\;..\extern\libjpeg\;..\extern\zlib\;&quot;..\extern\mad-0.15.1b\msvc++\Release\&quot;"
 				IgnoreDefaultLibraryNames="wininet.lib;msimg32.lib;libci.lib"
 				ProgramDatabaseFile="$(IntDir)/StepMania-SSE2.pdb"
 				GenerateMapFile="true"
@@ -6603,7 +6603,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6611,7 +6611,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6651,7 +6651,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6659,7 +6659,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6687,7 +6687,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6695,7 +6695,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6731,7 +6731,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6739,7 +6739,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6767,7 +6767,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6775,7 +6775,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6807,7 +6807,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6815,7 +6815,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6843,7 +6843,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6851,7 +6851,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6879,7 +6879,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6887,7 +6887,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6915,7 +6915,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6923,7 +6923,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6951,7 +6951,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6959,7 +6959,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6991,7 +6991,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -6999,7 +6999,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -7027,7 +7027,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -7035,7 +7035,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -7063,7 +7063,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -7071,7 +7071,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -7099,7 +7099,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -7107,7 +7107,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -7135,7 +7135,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="FastDebug|Win32"
+						Name="Release|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
@@ -7143,7 +7143,7 @@
 						/>
 					</FileConfiguration>
 					<FileConfiguration
-						Name="Release|Win32"
+						Name="FastDebug|Win32"
 						>
 						<Tool
 							Name="VCCLCompilerTool"
