I dont think the filter caught these for some reason either.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2609,7 +2609,7 @@ ItemsLongRowSharedX=SCREEN_CENTER_X+150
 ItemOnCommand=
 ColorSelected=color("0.5,1,0.5,1")
 ColorNotSelected=color("1,1,1,1")
-ColorDisabled=color("0.5,0.5,0.5,1")
+ColorDisabled=color("0.65,0,0,1")
 TweenSeconds=0
 
 [ScreenMiniMenuContext]
@@ -3711,10 +3711,11 @@ RowInitCommand=halign,0.5;valign,0.5;zoom,0.8;x,75;y,45;shadowlength,1
 OptionRowNormalMetricsGroup="OptionRowMiniMenuEditHelp"
 
 [OptionRowMiniMenuEditHelp]
+# Help menu ( Keys & Stuff )
 Fallback="OptionRowMiniMenu"
 
 TitleX=SCREEN_CENTER_X-312
-TitleOnCommand=halign,0;strokecolor,color("#222222CC");shadowlength,1;zoom,0.9
+TitleOnCommand=halign,0;strokecolor,color("#222222FF");shadowlength,1;zoom,0.75
 
 RowPositionTransformFunction=function(self,offsetFromCenter,itemIndex,numItems) \
 	local indexOffset = itemIndex-(numItems-1)/2; \
@@ -3726,8 +3727,8 @@ ItemsEndX=SCREEN_CENTER_X+260
 ItemsLongRowP1X=SCREEN_CENTER_X+260
 ItemsLongRowP2X=SCREEN_CENTER_X+260
 
-ItemOnCommand=x,SCREEN_CENTER_X+176;halign,0;strokecolor,color("#222222CC");shadowlength,1;zoom,0.9
-ColorDisabled=color("1,1,1,1")
+ItemOnCommand=x,SCREEN_CENTER_X+176;halign,0;strokecolor,color("#222222CC");shadowlength,1;zoom,0.75
+ColorDisabled=Color("Orange")
 
 [ScreenMiniMenuMainMenu]
 Fallback="ScreenMiniMenu"
