--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -991,6 +991,7 @@ TickcountColor=color("0,1,0,1")
 ComboColor=color("0.55,1,0,1")
 LabelColor=color("1,0,0,1")
 SpeedColor=color("0.5,1,1,1")
+ScrollColor=color("0.3,0.8,1,1")
 FakeColor=color("1,1,0.5,1")
 #
 BPMIsLeftSide=true
@@ -1002,6 +1003,7 @@ TickcountIsLeftSide=false
 ComboIsLeftSide=false
 LabelIsLeftSide=false
 SpeedIsLeftSide=false
+ScrollIsLeftSide=true
 FakeIsLeftSide=true
 #
 BPMOffsetX=60
@@ -1013,6 +1015,7 @@ TickcountOffsetX=70
 ComboOffsetX=50
 LabelOffsetX=130
 SpeedOffsetX=30
+ScrollOffsetX=40
 FakeOffsetX=90
 
 [PlayerStageStats]
