--- a/Themes/default/metrics.ini
+++ b/Themes/default/metrics.ini
@@ -1308,7 +1308,7 @@ SongMeterDisplayOffCommand=
 ShowSongTitle=true
 SongTitleX=SCREEN_CENTER_X
 SongTitleY=SCREEN_TOP+50+12
-SongTitleOnCommand=draworder,55;shadowlength,1;basezoom,0.5;zoomy,0;sleep,1.5+0.5;smooth,0.5;zoom,1
+SongTitleOnCommand=draworder,55;shadowlength,1;basezoom,0.5;zoomy,0;sleep,1.5+0.5;smooth,0.5;zoom,1;y,SCREEN_TOP+50+12
 SongTitleOffCommand=
 #
 SongMeterDisplayP1X=SCREEN_LEFT+16
