...of course, I am an idiot.
Somehow, I forgot to commit the metric itself!

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -503,6 +503,7 @@ BannerRandomCommand=
 [Gameplay]
 # System Direction
 ComboIsPerRow=ComboPerRow()
+MissComboIsPerRow=true
 MinScoreToContinueCombo=ComboContinue()
 MinScoreToMaintainCombo=ComboMaintain()
 MaxScoreToIncrementMissCombo='TapNoteScore_Miss'
