Added the LoopOnChartEnd metric for the editor.
Let the players decide whether to loop or not
when playing charts in the editor.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3626,6 +3626,8 @@ PlayRecordHelpX=SCREEN_LEFT+20
 PlayRecordHelpY=SCREEN_BOTTOM-20
 PlayRecordHelpOnCommand=halign,0;valign,0;shadowlength,1
 
+LoopOnChartEnd=true
+
 CurrentBeatFormat="%s:\n  %.5f\n"
 CurrentSecondFormat="%s:\n  %.5f\n"
 SnapToFormat="%s:\n  %s\n"
