--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -2679,7 +2679,7 @@ PrevScreen="ScreenOptionsExtended"
 Fallback="ScreenOptionsServiceChild"
 PrevScreen="ScreenOptionsService"
 NextScreen="ScreenOptionsService"
-LineNames="1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22"
+LineNames="1,2,3,4,5,6,7,8,9,FA,10,11,12,13,14,15,16,17,18,19,20,21,22"
 Line1="conf,Windowed"
 Line2="conf,DisplayResolution"
 Line3="conf,DisplayAspectRatio"
@@ -2689,6 +2689,7 @@ Line6="conf,SoundVolume"
 Line7="conf,TimingWindowScale"
 Line8="conf,LifeDifficulty"
 Line9="conf,AllowW1"
+LineFA="lua,GamePrefDefaultFail()"
 Line10="conf,AutogenSteps"
 Line11="conf,ShowBanners"
 Line12="conf,ShowCaution"
@@ -2911,7 +2912,8 @@ LineNames="1,2,3,4,5,6,7,8,9,10"
 Line1="list,LifeType"
 Line2="list,BarDrain"
 Line3="list,BatLives"
-Line4="list,Fail"
+# Line4="list,Fail"
+Line4="lua,GamePrefDefaultFail()"
 Line5="list,Assist"
 Line6="list,Rate"
 Line7="list,SoundEffect"
