Trying to restore Texture Font Generator.

--- a/src/Texture Font Generator/Texture Font Generator-net2008.vcproj
+++ b/src/Texture Font Generator/Texture Font Generator-net2008.vcproj
@@ -46,7 +46,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="..\libpng\include;..\zlib"
+				AdditionalIncludeDirectories="..\..\extern\libpng\include;..\..\extern\zlib"
 				PreprocessorDefinitions="WIN32;_WINDOWS;_DEBUG"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -71,7 +71,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libpng.lib;zdll.lib"
+				AdditionalDependencies="..\..\extern\libpng\lib\libpng.lib;..\..\extern\zlib\zdll.lib"
 				OutputFile="..\..\Program\$(ProjectName)-debug.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\libpng\lib;..\zlib"
@@ -135,7 +135,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="true"
-				AdditionalIncludeDirectories="..\libpng\include;..\zlib"
+				AdditionalIncludeDirectories="..\..\extern\libpng\include;..\..\extern\zlib"
 				PreprocessorDefinitions="WIN32;_WINDOWS;NDEBUG"
 				StringPooling="true"
 				MinimalRebuild="false"
@@ -161,7 +161,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="libpng.lib zdll.lib"
+				AdditionalDependencies="..\..\extern\libpng\lib\libpng.lib;..\..\extern\zlib\zdll.lib"
 				OutputFile="..\..\Program\$(ProjectName).exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\libpng\lib;..\zlib"
