--- a/src/Texture Font Generator/Texture Font Generator-net2008.vcproj
+++ b/src/Texture Font Generator/Texture Font Generator-net2008.vcproj
@@ -71,7 +71,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="..\..\extern\libpng\lib\libpng.lib;..\..\extern\zlib\zdll.lib"
+				AdditionalDependencies="..\..\extern\libpng\lib\libpng.lib ..\..\extern\zlib\zdll.lib"
 				OutputFile="..\..\Program\$(ProjectName)-debug.exe"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\libpng\lib;..\zlib"
@@ -161,7 +161,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="..\..\extern\libpng\lib\libpng.lib;..\..\extern\zlib\zdll.lib"
+				AdditionalDependencies="..\..\extern\libpng\lib\libpng.lib ..\..\extern\zlib\zdll.lib"
 				OutputFile="..\..\Program\$(ProjectName).exe"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\libpng\lib;..\zlib"
