Well, we can play custom courses now.
Still needs adjusting.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3835,7 +3835,7 @@ Fallback="ScreenOptionsSimpleService"
 PrevScreen="ScreenOptionsManageCourses"
 NextScreen="ScreenOptionsManageCourses"
 # huh
-PlayScreen=""
+PlayScreen="ScreenGameplay"
 EditScreen="ScreenOptionsEditCourse"
 OptionRowNormalMetricsGroup="OptionRowCourseOverview"
 
