Use a separate class for this.

--- a/Themes/_fallback/metrics.ini
+++ b/Themes/_fallback/metrics.ini
@@ -3259,6 +3259,13 @@ ScoreboardC3P2X=SCREEN_CENTER_X*1.75
 ScoreboardC3P2Y=SCREEN_CENTER_Y*0.45
 ScoreboardC3P2OnCommand=zoom,0.825;strokecolor,Color("Outline");shadowlength,1
 
+[ScreenGameplayEditCourse]
+Class="ScreenGameplayNormal"
+Fallback="ScreenGameplay"
+
+PrevScreen="ScreenOptionsCourseOverview"
+NextScreen="ScreenOptionsCourseOverview"
+
 [ScreenGameplayShared]
 Class="ScreenGameplayShared"
 Fallback="ScreenGameplay"
@@ -3835,7 +3842,7 @@ Fallback="ScreenOptionsSimpleService"
 PrevScreen="ScreenOptionsManageCourses"
 NextScreen="ScreenOptionsManageCourses"
 # huh
-PlayScreen="ScreenGameplay"
+PlayScreen="ScreenGameplayEditCourse"
 EditScreen="ScreenOptionsEditCourse"
 OptionRowNormalMetricsGroup="OptionRowCourseOverview"
 
